--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
     "name": "Profile Auto-Import",
     "version": "1.0",
     "description": "Import a candidate profile at the press of a button!",
+    "background": {
+      "page": "background.html"
+    },
     "options_page": "options.html",
     "permissions": ["downloads", "tabs", "activeTab", "declarativeContent", "storage"],
     "browser_action": {
@@ -31,7 +34,7 @@
     "content_scripts": [
       {
         "matches": ["http://*/*","https://*/*"],
-        "js": ["jquery-3.5.1.min.js", "importScript.js"]
+        "js": ["jquery-3.5.1.min.js", "testScript.js"]
       }
     ],
     "manifest_version": 2
