--- a/manifest.json
+++ b/manifest.json
@@ -1,41 +1,51 @@
 {
-    "name": "Profile Auto-Import",
-    "version": "1.0",
-    "description": "Import a candidate profile at the press of a button!",
-    "permissions": ["downloads", "tabs", "activeTab", "declarativeContent", "storage"],
-    "browser_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
-      }
-    },
-    "icons": {
+  "name": "Profile Auto-Import",
+  "version": "1.0",
+  "description": "Import a candidate profile at the press of a button!",
+  "permissions": [
+    "downloads",
+    "tabs",
+    "activeTab",
+    "declarativeContent",
+    "storage"
+  ],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
       "48": "images/get_started48.png",
       "128": "images/get_started128.png"
-    },
-    "commands": {
-      "_execute_browser_action": {
-        "suggested_key": {
-          "default": "Ctrl+Shift+F",
-          "mac": "MacCtrl+Shift+F"
-        },
-        "description": "Opens popup.html"
-      }
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://www.dice.com/employer/talent/profile/*"],
-        "js": ["jquery-3.5.1.min.js", "utils.js", "diceImport.js"]
+    }
+  },
+  "icons": {
+    "16": "images/get_started16.png",
+    "32": "images/get_started32.png",
+    "48": "images/get_started48.png",
+    "128": "images/get_started128.png"
+  },
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+F",
+        "mac": "MacCtrl+Shift+F"
       },
-      {
-        "matches": ["https://hiring.monster.com/searchmonster/job/*"],
-        "js": ["jquery-3.5.1.min.js", "utils.js", "monsterImport.js"]
-      }
-    ],
-    "manifest_version": 2
-  }
+      "description": "Opens popup.html"
+    }
+  },
+  "background": {
+    "persistent": false,
+    "scripts": ["background.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.dice.com/employer/talent/profile/*"],
+      "js": ["jquery-3.5.1.min.js", "utils.js", "diceImport.js"]
+    },
+    {
+      "matches": ["https://hiring.monster.com/searchmonster/job/*"],
+      "js": ["jquery-3.5.1.min.js", "utils.js", "monsterImport.js"]
+    }
+  ],
+  "manifest_version": 2
+}
