Auto-import profile on press of extension button
 - manifest.json: Use page_action, which disables the extension on
   most pages. Change key binding for the action to Ctrl+Shift+Q.

 - utils.js: Send message to activate the extension icon

 - background.js: Receive message to activate the extension icon

 - popup.html: Hide the "extract" button by default

 - popup.js: When not debugging, scrape and import automatically

--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,11 @@
   "permissions": [
     "downloads",
     "tabs",
-    "activeTab",
     "declarativeContent",
     "storage"
   ],
   "options_page": "options.html",
-  "browser_action": {
+  "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
@@ -26,10 +25,11 @@
     "128": "images/get_started128.png"
   },
   "commands": {
-    "_execute_browser_action": {
+    "_execute_page_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "MacCtrl+Shift+F"
+        "default": "Ctrl+Shift+Q",
+        "windows": "Ctrl+Shift+Q",
+        "mac": "MacCtrl+Shift+Q"
       },
       "description": "Opens popup.html"
     }
