--- a/manifest.json
+++ b/manifest.json
@@ -44,7 +44,10 @@
       "js": ["jquery-3.5.1.min.js", "utils.js", "diceImport.js"]
     },
     {
-      "matches": ["https://hiring.monster.com/searchmonster/job/*"],
+      "matches": [
+        "https://hiring.monster.com/searchmonster/job/*",
+        "https://hiring.monster.com/searchmonster/profile/*"
+      ],
       "js": ["jquery-3.5.1.min.js", "utils.js", "monsterImport.js"]
     }
   ],
