--- a/manifest.json
+++ b/manifest.json
@@ -37,19 +37,31 @@
   },
   "background": {
     "persistent": false,
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
   "content_scripts": [
     {
-      "matches": ["https://www.dice.com/employer/talent/profile/*"],
-      "js": ["jquery-3.5.1.min.js", "utils.js", "diceImport.js"]
+      "matches": [
+        "https://www.dice.com/employer/talent/profile/*"
+      ],
+      "js": [
+        "jquery-3.5.1.min.js",
+        "utils.js",
+        "diceImport.js"
+      ]
     },
     {
       "matches": [
         "https://hiring.monster.com/searchmonster/job/*",
         "https://hiring.monster.com/searchmonster/profile/*"
       ],
-      "js": ["jquery-3.5.1.min.js", "utils.js", "monsterImport.js"]
+      "js": [
+        "jquery-3.5.1.min.js",
+        "utils.js",
+        "monsterImport.js"
+      ]
     }
   ],
   "manifest_version": 2
