--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,7 @@
         "https://www.dice.com/employer/talent/profile/*"
       ],
       "js": [
-        "jquery-3.5.1.min.js",
+        "lib/jquery-3.5.1.min.js",
         "utils.js",
         "diceImport.js"
       ]
@@ -58,7 +58,7 @@
         "https://hiring.monster.com/searchmonster/profile/*"
       ],
       "js": [
-        "jquery-3.5.1.min.js",
+        "lib/jquery-3.5.1.min.js",
         "utils.js",
         "monsterImport.js"
       ]
