--- a/manifest.json
+++ b/manifest.json
@@ -13,17 +13,17 @@
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/pyramid_16.png",
+      "32": "images/pyramid_32.png",
+      "48": "images/pyramid_48.png",
+      "128": "images/pyramid_128.png"
     }
   },
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/pyramid_16.png",
+    "32": "images/pyramid_32.png",
+    "48": "images/pyramid_48.png",
+    "128": "images/pyramid_128.png"
   },
   "commands": {
     "_execute_page_action": {
